
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-Oct-2010 Jean-Marie Simonet
 # [#21910] installation of module does not create module listing. Thanks Dennis and Troy.
 # [#23031] RTL fix for display of menus in menu assignments. Thanks Andrea.
 # [#22994] Contacts metadata options - registry errors. Thanks Andrew.
 
28-Oct-2010 Andrew Eddie
 # Fixed issue [#23041] Incorrect testing for variable is an instance of a class (marius van rijnsoever).
 # Fixed issue [#23032] Help system is generating incorrect URLs (Chris Davenport, Dennis Hermacki).
 # Fixed issue [#23030] Bluestork Menu Model Assignments modal is closing immediately upon display (Andrea Tarr, Dennis Hermacki).
 # Fixed issue [#23039] Cross site scripting Revision 19231 (Ervis Tusha, Ian MacLennan).
 # Fixed issue [#23036] Undefined property: stdClass::$cachable in \libraries\joomla\environment\response.php on line 49 (Dennis Hermacki).
 # Fixed issue [#22677] The treatment of the componentlayout parameter in categories is incorrect (Elin Waring).

27-Oct-2010 Jean-Marie Simonet
 # [#23002] jgrid.published does not show all possible statuses as was shown in 1.5. Thanks Dennis.
 # [#23018] Clean up Legacy() method from content/contact helpers. Thanks Louis.
 # Missing RTL css in bluestork.
 # [#22619] SEF issue with mod_rewrite on when period in the alias.
 
26-Oct-2010 Ian MacLennan
 # [#22987] using getElementById('adminForm') in submitform breaks Joomla 1.5 compatibility

26-Oct-2010 Jean-Marie Simonet
 # [#23011] RTL fixes for form controls in the option modals and menu assignments. Thanks Andrea
 # [#23024] Backend image file missed - j_arrow_right.png. RTL CSS added to fit.
 # [#23025] Show "Linked user" in "Contact Manager: Contacts". Thanks Dennis.

25-Oct-2010 Jean-Marie Simonet
 # Forgotten getLayout() change for pagebreak in rev 22932
 # [#23004] pagenavigation plugin generates incorrect XHTML. Thanks Bill and Rouven.