@@ -78,6 +78,10 @@ PLG_TINY_FIELD_PATH_DESC="If set to ON, it displays the set classes for the mark
 PLG_TINY_FIELD_PATH_LABEL="Element Path"
 PLG_TINY_FIELD_PROHIBITED_DESC="Elements that will be cleaned from the text"
 PLG_TINY_FIELD_PROHIBITED_LABEL="Prohibited Elements"
+PLG_TINY_FIELD_RESIZE_HORIZONTAL_DESC="Enable/disable the horizontal resizing."
+PLG_TINY_FIELD_RESIZE_HORIZONTAL_LABEL="Horizontal resizing"
+PLG_TINY_FIELD_RESIZING_DESC="Enable/disable the resizing button."
+PLG_TINY_FIELD_RESIZING_LABEL="Resizing"
 PLG_TINY_FIELD_RTL_DESC="Select whether to display the RTL button. Only Works in Advanced mode"
 PLG_TINY_FIELD_RTL_LABEL="Directionality"
 PLG_TINY_FIELD_SAFARI_DESC="Turn on/off Safari compatibility plugin"
