@@ -200,6 +200,24 @@
 					description="PLG_TINY_FIELD_HTMLWIDTH_DESC"
 					label="PLG_TINY_FIELD_HTMLWIDTH_LABEL"
 				/>
+				
+				<field name="resizing" type="radio"
+					default="true"
+					description="PLG_TINY_FIELD_RESIZING_DESC"
+					label="PLG_TINY_FIELD_RESIZING_LABEL"
+				>
+					<option value="false">JOFF</option>
+					<option value="true">JON</option>
+				</field>
+				
+				<field name="resize_horizontal" type="radio"
+					default="false"
+					description="PLG_TINY_FIELD_RESIZE_HORIZONTAL_DESC"
+					label="PLG_TINY_FIELD_RESIZE_HORIZONTAL_LABEL"
+				>
+					<option value="false">JOFF</option>
+					<option value="true">JON</option>
+				</field>
 
 				<field name="element_path" type="radio"
 					default="1"
