@@ -31,6 +31,7 @@ $ -> Language fix or change
  # [#21910] installation of module does not create module listing. Thanks Dennis and Troy.
  # [#23031] RTL fix for display of menus in menu assignments. Thanks Andrea.
  # [#22994] Contacts metadata options - registry errors. Thanks Andrew.
+ # [#23037] TinyMCE resizing settings. Thanks Dennis.
  
 28-Oct-2010 Andrew Eddie
  # Fixed issue [#23041] Incorrect testing for variable is an instance of a class (marius van rijnsoever).
